--- a/vercel.json
+++ b/vercel.json
@@ -1,9 +1,8 @@
 {
   "version": 2,
+  "builds": [{ "src": "api/*.js", "use": "@vercel/node" }],
   "routes": [
-    {
-      "src": "/(.*)",
-      "dest": "/api/whitelist.js"
-    }
+    { "src": "/generate", "dest": "/api/generate.js" },
+    { "src": "/.*", "dest": "/api/validate.js" }
   ]
 }
