--- a/vercel.json
+++ b/vercel.json
@@ -3,6 +3,7 @@
   "builds": [{ "src": "api/*.js", "use": "@vercel/node" }],
   "routes": [
     { "src": "/generate", "dest": "/api/generate.js" },
+    { "src": "/webhook", "dest": "/api/webhook.js" },
     { "src": "/.*", "dest": "/api/validate.js" }
   ]
 }
